feat: Complete Phase 1 with unified API and comprehensive cleanup
- Integrate FAA lookup into unified TrueHour API backend
- Add nginx reverse proxy for frontend API requests (/api/*)
- Update all API endpoints from /tail-lookup-api/ to /api/
- Fix all references: tail-lookup → TrueHour/FAA lookup service
- Update backend docstrings, HTML titles, and User-Agent headers
- Complete Phase 1 documentation with ForeFlight import
- Add environment configuration with .env.example template
- Remove orphaned containers from old architecture
- All integration tests passing (direct + proxied API access)

Breaking changes:
- Consolidated tail-lookup service into main API
- Frontend now requires nginx proxy for API requests

Files changed: 19 (936 additions, 316 deletions)
Resolves Phase 1 migration to monorepo architecture

--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tail-lookup</title>
+  <title>TrueHour FAA Lookup</title>
   <style>
     * { box-sizing: border-box; }
     body {
@@ -109,7 +109,7 @@
   </style>
 </head>
 <body>
-  <h1>✈️ tail-lookup</h1>
+  <h1>✈️ TrueHour FAA Lookup</h1>
   <p class="subtitle">FAA Aircraft Registration Lookup</p>
 
   <div class="tabs">
