--- a/frontend/index.html
+++ b/frontend/index.html
@@ -581,7 +581,7 @@
                         </div>
                     </div>
 
-                    <div id="faaLookupStatus" style="display: none; padding: 12px; border-radius: 6px; margin: 10px 0;"></div>
+                    <div id="singleFaaLookupStatus" style="display: none; padding: 12px; border-radius: 6px; margin: 10px 0;"></div>
 
                     <div class="input-row">
                         <div class="input-label">Make</div>
