fix: resolve all security and linting CI failures
- Fix date type shadowing in expenses.py router
- Remove Upgrade header forwarding to prevent H2C smuggling
- Correct cyclonedx-py SBOM generation arguments
- Add hadolint ignore rules for SARIF generation
- Create .env file for docker-compose validation
- Convert invalid button elements to semantic divs
- Enable Gitleaks to fail on secret detection with license

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,23 +27,23 @@
             </div>
 
             <div class="onboarding-options">
-                <button class="onboarding-card" onclick="OnboardingManager.startManualPath()">
+                <div class="onboarding-card" role="button" tabindex="0" onclick="OnboardingManager.startManualPath()">
                     <div class="onboarding-icon">📝</div>
                     <h3>Start Fresh</h3>
                     <p>Enter your flight hours and training goals manually</p>
-                </button>
+                </div>
 
-                <button class="onboarding-card" onclick="OnboardingManager.startForeFlightPath()">
+                <div class="onboarding-card" role="button" tabindex="0" onclick="OnboardingManager.startForeFlightPath()">
                     <div class="onboarding-icon">✈️</div>
                     <h3>Import Logbook</h3>
                     <p>Upload your ForeFlight CSV to auto-fill your hours</p>
-                </button>
+                </div>
 
-                <button class="onboarding-card" onclick="OnboardingManager.startLoadPath()">
+                <div class="onboarding-card" role="button" tabindex="0" onclick="OnboardingManager.startLoadPath()">
                     <div class="onboarding-icon">💾</div>
                     <h3>Load Budget</h3>
                     <p>Continue working on a previously saved budget</p>
-                </button>
+                </div>
             </div>
 
             <div class="landing-footer">
