--- a/frontend/index.html
+++ b/frontend/index.html
@@ -498,11 +498,11 @@
             <input type="file" id="budgetFileInput" class="hidden-file-input" accept=".json">
         </div>
 
-        <!-- Training Progress Widget -->
+        <!-- Flight Hours & Requirements Widget -->
         <div class="training-progress-widget" id="trainingProgressWidget" style="display: none;">
             <div class="widget-header">
                 <div class="widget-title-section">
-                    <h2 class="widget-title">Training Progress</h2>
+                    <h2 class="widget-title">Flight Hours & Requirements</h2>
                     <p class="widget-subtitle">Track your hours and certification requirements</p>
                 </div>
                 <button class="btn-primary" onclick="TrainingWidget.showImportModal()">
@@ -573,11 +573,27 @@
                     </div>
                 </div>
 
-                <!-- Certification Progress -->
+                <!-- Certification Requirements -->
                 <div class="cert-progress-section" id="widget-cert-progress" style="display: none;">
-                    <h3 class="section-heading">Certification Progress</h3>
-                    <div class="cert-progress-grid" id="cert-progress-container">
-                        <!-- Progress bars will be inserted here -->
+                    <div class="cert-section-header" onclick="TrainingWidget.toggleCertSection()">
+                        <h3 class="section-heading">Certification Requirements</h3>
+                        <svg class="section-chevron" id="cert-section-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"></polyline>
+                        </svg>
+                    </div>
+                    <div class="cert-section-body expanded" id="cert-section-body">
+                        <div class="cert-selector-header">
+                            <select id="cert-selector" class="cert-selector-dropdown">
+                                <option value="">Select Certification</option>
+                                <option value="instrument">Instrument Rating</option>
+                                <option value="private" disabled>Private Pilot (Coming Soon)</option>
+                                <option value="commercial" disabled>Commercial Pilot (Coming Soon)</option>
+                                <option value="cfi" disabled>CFI (Coming Soon)</option>
+                            </select>
+                        </div>
+                        <div class="cert-requirements-container" id="cert-progress-container">
+                            <!-- Requirements panels will be inserted here -->
+                        </div>
                     </div>
                 </div>
 
@@ -1043,16 +1059,42 @@
         <!-- Budget Tracking Section (Spans Full Width) -->
         <div class="panel" style="margin-top: 30px; grid-column: 1 / -1;">
             <h2>3. Budget Tracking</h2>
-            <p class="panel-subtitle">Track and compare your aviation budgets vs actual spending.</p>
+            <p class="panel-subtitle">Track your planned vs actual aviation spending with budget cards.</p>
 
-            <div class="budget-actions">
-                <button id="addBudgetBtn" class="btn-primary">
-                    <span>+ Create Budget</span>
-                </button>
+            <!-- Budget Summary Cards -->
+            <div id="budgetSummary" class="budget-summary-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-bottom: 25px;">
+                <!-- Summary cards will be inserted here by budget-cards.js -->
             </div>
 
-            <div id="budgetList" class="budget-list">
-                <!-- Budget cards will be inserted here by budget.js -->
+            <!-- Budget Actions and Filters -->
+            <div class="budget-actions" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; flex-wrap: wrap; gap: 15px;">
+                <button id="addBudgetCardBtn" class="btn-primary">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 6px;">
+                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                        <line x1="5" y1="12" x2="19" y2="12"></line>
+                    </svg>
+                    <span>Add Budget Card</span>
+                </button>
+
+                <div style="display: flex; gap: 10px; align-items: center;">
+                    <label style="font-size: 0.9em; color: #64748b;">Filter:</label>
+                    <select id="budgetMonthSelector" class="input-field" style="width: auto; min-width: 150px;">
+                        <option value="">All Months</option>
+                    </select>
+                    <select id="budgetYearSelector" class="input-field" style="width: auto; min-width: 120px;">
+                        <!-- Year options will be populated by JS -->
+                    </select>
+                </div>
+            </div>
+
+            <!-- Budget Cards List -->
+            <div id="budgetCardsList" class="budget-cards-container">
+                <!-- Budget cards will be inserted here by budget-cards.js -->
+            </div>
+
+            <!-- Legacy Budget List (Hidden by default) -->
+            <div id="budgetList" class="budget-list" style="display: none;">
+                <!-- Legacy budget cards will be inserted here by budget.js -->
             </div>
         </div>
     </div>
@@ -1307,6 +1349,95 @@
         </div>
     </div>
 
+    <!-- Budget Card Form Modal (Create/Edit Budget Card) -->
+    <div id="budgetCardFormModal" class="modal" style="display: none;">
+        <div class="modal-content" style="max-width: 600px;">
+            <div class="modal-header">
+                <h2 id="budgetCardFormTitle">Add Budget Card</h2>
+                <button class="modal-close" onclick="BudgetCards.closeCreateModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="budgetCardForm">
+                    <div class="form-group">
+                        <label for="budgetCardName">Budget Name <span style="color: #dc2626;">*</span></label>
+                        <input type="text" id="budgetCardName" placeholder="e.g., Blue Sky Flight Club" required>
+                        <small>Descriptive name for this budget item</small>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="budgetCardCategory">Category <span style="color: #dc2626;">*</span></label>
+                            <select id="budgetCardCategory" required>
+                                <option value="">-- Select Category --</option>
+                                <option value="Administrative">Administrative</option>
+                                <option value="Training">Training</option>
+                                <option value="Family">Family</option>
+                                <option value="Maintenance">Maintenance</option>
+                                <option value="Insurance">Insurance</option>
+                                <option value="Equipment">Equipment</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="budgetCardFrequency">Frequency <span style="color: #dc2626;">*</span></label>
+                            <select id="budgetCardFrequency" required>
+                                <option value="">-- Select Frequency --</option>
+                                <option value="once">One-Time</option>
+                                <option value="monthly">Monthly</option>
+                                <option value="annual">Annual</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="budgetCardDate">Date <span style="color: #dc2626;">*</span></label>
+                            <input type="date" id="budgetCardDate" required>
+                            <small>Use first of month for monthly budgets</small>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="budgetCardAmount">Budgeted Amount <span style="color: #dc2626;">*</span></label>
+                            <div class="input-wrapper">
+                                <span class="input-unit">$</span>
+                                <input type="number" id="budgetCardAmount" placeholder="500" min="0" step="0.01" required>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="budgetCardHours">Associated Hours (Optional)</label>
+                        <div class="input-wrapper">
+                            <input type="number" id="budgetCardHours" placeholder="12.0" min="0" step="0.1">
+                            <span class="input-unit">hours</span>
+                        </div>
+                        <small>Training hours associated with this budget</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="budgetCardNotes">Notes (Optional)</label>
+                        <textarea id="budgetCardNotes" placeholder="Additional details, breakdown, etc." rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="budgetCardStatus">Status</label>
+                        <select id="budgetCardStatus">
+                            <option value="active">Active</option>
+                            <option value="completed">Completed</option>
+                            <option value="cancelled">Cancelled</option>
+                        </select>
+                    </div>
+
+                    <div class="form-actions">
+                        <button type="button" class="btn-secondary" onclick="BudgetCards.closeCreateModal()">Cancel</button>
+                        <button type="submit" class="btn-primary">Save Budget Card</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <!-- Toast Notification Container -->
     <div id="toastContainer" style="position: fixed; top: 20px; right: 20px; z-index: 10000; display: flex; flex-direction: column; gap: 10px;"></div>
 
@@ -1349,6 +1480,7 @@
     <script src="js/aircraft-ui.js"></script>
     <script src="js/user-data.js"></script>
     <script src="js/budget.js"></script>
+    <script src="js/budget-cards.js"></script>
     <script src="js/training-widget.js"></script>
     <script src="js/app.js"></script>
     <script src="js/onboarding.js"></script>
