--- a/frontend/index.html
+++ b/frontend/index.html
@@ -802,26 +802,6 @@
                     </div>
                 </div>
 
-                <div class="section-title">Other Hourly Rates</div>
-
-                <div class="input-row">
-                    <label class="input-label" for="instructorRate">Flight/Ground Instruction</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="instructorRate" name="instructorRate" value="60">
-                        <span class="input-unit">per hour</span>
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="simulatorRate">Flight Simulator</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="simulatorRate" name="simulatorRate" value="105">
-                        <span class="input-unit">per hour</span>
-                    </div>
-                </div>
-
                 <div class="section-title">Planned Training Hours</div>
 
                 <div class="input-row">
@@ -841,14 +821,6 @@
                 </div>
 
                 <div class="input-row">
-                    <label class="input-label" for="groundHours">Ground Instruction Hours</label>
-                    <div class="input-wrapper">
-                        <input type="number" class="input-field" id="groundHours" name="groundHours" value="0">
-                        <span class="input-unit">hours</span>
-                    </div>
-                </div>
-
-                <div class="input-row">
                     <div class="input-label">Additional Personal Hours</div>
                     <div class="input-wrapper">
                         <input type="number" class="input-field" id="familyHours" value="0" readonly>
@@ -856,82 +828,18 @@
                     </div>
                 </div>
 
-                <div class="section-title">Gear & Supplies</div>
-
-                <div class="input-row">
-                    <label class="input-label" for="headsetCost">Aviation Headset</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="headsetCost" name="headsetCost" value="0">
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="booksCost">Ground School / Books</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="booksCost" name="booksCost" value="0">
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="bagCost">Flight Supplies</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="bagCost" name="bagCost" value="0">
-                    </div>
-                </div>
-
-                <div class="section-title">Exams & Fees</div>
-
-                <div class="input-row">
-                    <label class="input-label" for="medicalCost">Aviation Medical Exam</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="medicalCost" name="medicalCost" value="300">
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="knowledgeCost">FAA Knowledge Test</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="knowledgeCost" name="knowledgeCost" value="250">
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="checkrideCost">Practical Exam (Checkride)</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="checkrideCost" name="checkrideCost" value="1000">
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="insuranceCost">Renter's Insurance (Annual)</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="insuranceCost" name="insuranceCost" value="1150">
-                    </div>
-                </div>
-
-                <div class="section-title">Subscriptions (Annual)</div>
-
-                <div class="input-row">
-                    <label class="input-label" for="foreflightCost">ForeFlight / EFB</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="foreflightCost" name="foreflightCost" value="275">
-                    </div>
-                </div>
-
-                <div class="input-row">
-                    <label class="input-label" for="onlineSchoolCost">Online Ground School</label>
-                    <div class="input-wrapper">
-                        <span style="color: #999;">$</span>
-                        <input type="number" class="input-field" id="onlineSchoolCost" name="onlineSchoolCost" value="0">
-                    </div>
+                <!-- Budget Cards Section -->
+                <div class="section-title">Budget Planning</div>
+                <p style="color: #666; margin: 0 0 15px 0; font-size: 0.95em;">
+                    Create budget cards to plan your training expenses. Use templates for quick setup or create custom cards for specific expenses.
+                </p>
+                <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+                    <button class="btn-primary" onclick="BudgetCardTemplates.showTemplateModal()" style="flex: 1;">
+                        📋 Quick Start Templates
+                    </button>
+                    <button class="btn-secondary" onclick="BudgetCards.showCreateModal()" style="flex: 1;">
+                        ➕ Create Custom Card
+                    </button>
                 </div>
 
                 <div class="section-title">Contingency</div>
@@ -1043,8 +951,19 @@
 
                 <div id="budgetBreakdown" class="summary-card">
                     <h2>Budget Breakdown</h2>
-                    <div class="chart-container">
+                    <div class="chart-container" style="position: relative;">
                         <canvas id="budgetChart"></canvas>
+                        <div id="chartEmptyState" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; width: 100%;">
+                            <svg width="120" height="120" viewBox="0 0 120 120" style="opacity: 0.3; margin-bottom: 15px;">
+                                <circle cx="60" cy="60" r="50" fill="none" stroke="#e5e7eb" stroke-width="8"/>
+                                <path d="M 60 10 A 50 50 0 0 1 110 60" fill="none" stroke="#d1d5db" stroke-width="8" stroke-linecap="round"/>
+                                <path d="M 110 60 A 50 50 0 0 1 60 110" fill="none" stroke="#d1d5db" stroke-width="8" stroke-linecap="round"/>
+                                <path d="M 60 110 A 50 50 0 0 1 10 60" fill="none" stroke="#d1d5db" stroke-width="8" stroke-linecap="round"/>
+                                <path d="M 10 60 A 50 50 0 0 1 60 10" fill="none" stroke="#d1d5db" stroke-width="8" stroke-linecap="round"/>
+                            </svg>
+                            <div style="color: #9ca3af; font-size: 16px; font-weight: 500; margin-bottom: 8px;">No Budget Data Yet</div>
+                            <div style="color: #d1d5db; font-size: 14px;">Create budget cards to see your breakdown</div>
+                        </div>
                     </div>
                     <div class="chart-legend" id="chartLegend"></div>
                 </div>
@@ -1488,7 +1407,7 @@
     <div id="toastContainer" style="position: fixed; top: 20px; right: 20px; z-index: 10000; display: flex; flex-direction: column; gap: 10px;"></div>
 
     <!-- Confirmation Modal -->
-    <div id="confirmModal" class="modal" style="display: none;">
+    <div id="confirmModal" class="modal" style="display: none; z-index: 1100;">
         <div class="modal-content" style="max-width: 400px;">
             <div class="modal-header">
                 <h2 id="confirmTitle">Confirm Action</h2>
@@ -1498,7 +1417,22 @@
             </div>
             <div class="modal-footer" style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 20px;">
                 <button id="confirmCancelBtn" class="modal-btn modal-btn-secondary">Cancel</button>
-                <button id="confirmOkBtn" class="modal-btn modal-btn-danger">Delete</button>
+                <button id="confirmOkBtn" class="modal-btn modal-btn-primary">Confirm</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Error Modal -->
+    <div id="errorModal" class="modal" style="display: none; z-index: 1100;">
+        <div class="modal-content" style="max-width: 400px;">
+            <div class="modal-header">
+                <h2 id="errorTitle">Error</h2>
+            </div>
+            <div class="modal-body">
+                <p id="errorMessage" style="margin: 0; line-height: 1.6;"></p>
+            </div>
+            <div class="modal-footer" style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 20px;">
+                <button id="errorOkBtn" class="modal-btn modal-btn-primary">OK</button>
             </div>
         </div>
     </div>
@@ -1620,6 +1554,29 @@
         </div>
     </footer>
 
+    <!-- Budget Card Templates Modal -->
+    <div id="budgetTemplateModal" class="modal" style="display: none;">
+        <div class="modal-content" style="max-width: 900px; max-height: 90vh; display: flex; flex-direction: column;">
+            <div class="modal-header">
+                <h2>Quick Start Budget Cards</h2>
+                <button class="modal-close" onclick="BudgetCardTemplates.closeTemplateModal()">&times;</button>
+            </div>
+            <div class="modal-body" style="flex: 1; overflow-y: auto; padding-bottom: 0;">
+                <p style="margin-bottom: 20px; color: #64748b;">
+                    Select templates to quickly create budget cards for common aviation expenses. Click any card to add it to your budget.
+                </p>
+                <div id="templateCardsContainer" class="template-grid" style="margin-bottom: 30px;"></div>
+            </div>
+            <div class="form-actions" style="border-top: 1px solid #e9ecef; padding: 20px; margin: 0; display: flex; gap: 10px; justify-content: space-between; flex-shrink: 0;">
+                <button type="button" class="btn-secondary" onclick="BudgetCardTemplates.closeTemplateModal()" style="margin-right: auto;">Close</button>
+                <div style="display: flex; gap: 10px;">
+                    <button class="btn-secondary" onclick="BudgetCardTemplates.createAll()">Create All Templates</button>
+                    <button class="btn-primary" onclick="BudgetCards.showCreateModal(); BudgetCardTemplates.closeTemplateModal();">Create Custom Card</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Application JavaScript -->
     <script>
         // Set current year
@@ -1632,6 +1589,7 @@
     <script src="js/expenses.js"></script>
     <script src="js/budget.js"></script>
     <script src="js/budget-cards.js"></script>
+    <script src="js/budget-card-templates.js"></script>
     <script src="js/training-widget.js"></script>
     <script src="js/app.js"></script>
     <script src="js/onboarding.js"></script>
