feat(flights): add comprehensive flight logging system
- implement flight tracking API with full CRUD operations
- add CSV import capability for expenses with budget card linking
- create hours recalculation engine for pilot certification tracking
- build automatic database migration system with schema versioning
- expand expense queries to include budget card associations via joins
- add development data reset endpoint for testing workflows
- integrate flight router into main application
- support complex flight time calculations (dual XC, towered ops, long XC)

--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -249,7 +249,7 @@
     }
 
     // Load stats
-    fetch(`${API}/stats`)
+    fetch(`${API}/v1/stats`)
       .then(r => r.json())
       .then(data => {
         document.getElementById('recordCount').textContent = data.record_count?.toLocaleString() || '—';
