--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -249,7 +249,7 @@
     }
 
     // Load stats
-    fetch(`${API}/v1/stats`)
+    fetch(`${API}/stats`)
       .then(r => r.json())
       .then(data => {
         document.getElementById('recordCount').textContent = data.record_count?.toLocaleString() || '—';
